# odmsg

./: .gitignore  CMakeLists.txt  LICENSE  Makefile.bak  README.md  main.c  odz.h  odz_util.c
.github/workflows/: cmake-single-platform.yml
